--- a/specific_speed.html
+++ b/specific_speed.html
@@ -5,8 +5,12 @@
 		margin-top: .25rem;	
 		display:block;	
 	}
-	#plot,#calc_btn {
+	#plot {
 		display:none;
+		vertical-align:top
+	}
+	#calc_btn {
+		
 		margin-top:1rem
 	}
 	select,input {
@@ -16,33 +20,40 @@
 </style>
 <div>
 	<h1>Specific Speed</h1>
-	<a style='display:block' onclick='lnk(event,"what_is_ss")' href=''>What Is Specific Speed?</a><br>
-	<span>Pump Style</span><br>
-	<select name='pump_style'>
-        <option selected disabled>Choose</option>
-		<option>End suction slurry</option>
-        <option>End suction sewage</option>
-        <option>End suction stock</option>
-		<option>End suction submersible sewage</option>
-        <option>API double suction</option>
-        <option>Multistage boiler feed</option>
-        <option>End suction ANSI/API</option>
-        <option>Axial flow</option>
-        <option>Double suction</option>
-        <option>Vertical turbine</option>
-        <option>Large end suction</option>
-    </select><br>
-	Flow<br>
-	<input name='flow'><br>
-	Head<br>
-	<input name='head'><br>
-	Pump Speed<br>
-	<input name='pump_rated_speed'><br>
-	<button id=calc_btn class=prime onclick='calc()'>CALCULATE</button>
-	<div id=plot>
-		<span style='margin-right:1rem'>Specific Speed: </span><span id=ss></span>
-		<span>Efficiency Correction: </span><span></span>
-		<canvas width="700" height="500"></canvas>
+	<div style='display:flex; justify-content: space-between;'>
+		<div>
+			<a style='display:block' onclick='lnk(event,"what_is_ss")' href=''>What Is Specific Speed?</a><br>
+			<span>Pump Style</span><br>
+			<select name='pump_style'>
+				<option selected disabled>Choose</option>
+				<option>End suction slurry</option>
+				<option>End suction sewage</option>
+				<option>End suction stock</option>
+				<option>End suction submersible sewage</option>
+				<option>API double suction</option>
+				<option>Multistage boiler feed</option>
+				<option>End suction ANSI/API</option>
+				<option>Axial flow</option>
+				<option>Double suction</option>
+				<option>Vertical turbine</option>
+				<option>Large end suction</option>
+			</select><br>
+			Flow<br>
+			<input name='flow'><br>
+			Head<br>
+			<input name='head'><br>
+			Pump Speed<br>
+			<input name='pump_rated_speed'><br>
+			<button id=calc_btn class=prime onclick='calc()'>CALCULATE</button>
+		</div>
+		<div id=plot>
+			<canvas width="700" height="500"></canvas>
+			<div style='display:flex; justify-content: space-between;'>
+				<div>Specific Speed: <span id=ss></span></div>
+				<div>Efficiency Correction: <span id=ef></span></div>				
+			</div>
+				
+		</div>
 	</div>
 </div>
 
@@ -66,7 +77,7 @@
 	}
 	function calc() {
 		const ss = nm('pump_rated_speed').val() * Math.sqrt(nm('flow').val()) / Math.pow(nm('head').val(),.75);
-		$('#ss').text(ss);
+		$('#ss').text(rnd(ss));
 		Cnv.width+=0;
 		plot();		
 	}	 
@@ -74,14 +85,14 @@
 	
 	nmAll().change(()=>{
 		$('#plot').hide();
-		let d = setData({});debugger;
+		let d = setData({});
 		if (d.pump_style>=0 && d.flow!='' && d.head!='' && d.pump_rated_speed!='') {
 			$('#calc_btn').show();
 		} else {
 			$('#calc_btn').hide();
 		}
 	});
-
+	//nmAll().first().change();
 	
 	
 </script>
