--- a/index.html
+++ b/index.html
@@ -309,6 +309,9 @@
         }
         return v;
       }
+      function em(t) {
+        return ` <em>(${t})</em>`;
+      }
       
       function main() {
         Nav = [];
