--- a/specific_speed.html
+++ b/specific_speed.html
@@ -98,12 +98,8 @@
 			$('#plot_btn').hide();
 		}
 	});
-	if (unit(DIST)=='ft') {
-
-	} else {
-
-	}	
-	
+	$('#lbl_flow').append(em(unit(DIST) == 'ft' ? 'gpm' : 'm^3/hr'));
+	$('#lbl_hd').append(em(unit(DIST)));	
 	
 </script>
 
