--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
 	<a onclick='lnk(event,"pump_eff")' href=''>Pump Efficiency</a><br>
 	<a onclick='lnk(event,"motor_perf")' href=''>Motor Performance</a><br>
 	<a onclick='lnk(event,"specific_speed")' href=''>Specific Speed</a><br>
-	<a onclick='lnk(event,"nema")' href=''>NEMA</a><br>	
+	<a onclick='lnk(event,"nema")' href=''>NEMA Energy Efficiency</a><br>	
 </ul>
 <table>
 	<tr>
