--- a/nema.html
+++ b/nema.html
@@ -9,7 +9,7 @@
     }
 </style>
 
-<h1>NEMA</h1>
+<h1>NEMA Energy Efficiency</h1>
 Line Frequency <em>(Hz)</em>
 <label><input name=line type=radio value=0> 50</label>
 <label class=vsp><input name=line type=radio value=1 checked> 60</label>
