--- a/grid.html
+++ b/grid.html
@@ -346,7 +346,7 @@
   }  
 
   txt = unit(POWER);
-  fldUnit('Power Rating');
+  fldUnit('Rated Power');
   fldUnit('Motor Rated');
   fldUnit('Motor Shaft');
   fldUnit('Pump Shaft');
