--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
       function curve(fn,col='#FECB00') {        
         P.ctx.strokeStyle = col;	
   			P.ctx.beginPath();
-        for (let x=0; rnd(x)<=P.stepX*P.cntX; x+=P.stepX/10) {			
-    			P.ctx.lineTo(xPos(x), yPos(fn(x)));		
+        for (let x=0; rnd(x)<=P.stepX*P.cntX; x+=P.stepX/10) {	          
+          if (fn(x)<=P.stepY*P.cntY) {
+      			P.ctx.lineTo(xPos(x), yPos(fn(x)));		
+          }		
 	    	}
 		    P.ctx.stroke();
       }
