--- a/specific_speed.html
+++ b/specific_speed.html
@@ -65,7 +65,7 @@
 		P = {
 			cnv: Cnv,
 			padX: 25,
-			stepX: 500,
+			stepX: 600,
 			cntX: 20,
 			padY: 50,
 			stepY: 2,
@@ -103,6 +103,7 @@
 			$('#plot_btn').hide();
 		}
 	});
+	nmAll().first().change();
 	$('#lbl_flow').append(em(unit(DIST) == 'ft' ? 'gpm' : 'm^3/hr'));
 	$('#lbl_hd').append(em(unit(DIST)));	
 	
