--- a/grid.html
+++ b/grid.html
@@ -133,14 +133,14 @@
   </tr>
   <tr>
     <td><div>Size Margin <em>(%)</em></div></td>
-    <td><input name='margin' data-vd-gt></td>
+    <td><input name='margin' onchange='vdGt(this,0)'></td>
   </tr>
   <tr>
     <td class='th'>Cost</td><td/>
   </tr>
   <tr>
-    <td>Operating Fraction</td>
-    <td><input name='fraction'></td>
+    <td><div>Operating Fraction <em>(%)</em></div></td>
+    <td><input name='fraction' data-vd-gt></td>
   </tr>
  <tr>
     <td><div>Energy Cost<em>($/kwhr)</em></td>
