--- a/grid.html
+++ b/grid.html
@@ -162,11 +162,11 @@
   </tr>         
   <tr>
     <td><div title='Enter either power or current, for the desired estimation method'>Motor Power<em>(kW)</em></div></td>
-    <td><input name='motor_field_power' onchange="clrFld('motor_field_current',this)"></td>
+    <td><input name='motor_field_power' data-vd-gt onchange="clrFld('motor_field_current',this)"></td>
   </tr>
   <tr>
     <td><div title='Enter either power or current, for the desired estimation method'>Motor Current<em>(A)</em></div></td>
-    <td><input name='motor_field_current' onchange="clrFld('motor_field_power',this)"></td>
+    <td><input name='motor_field_current' data-vd-gt onchange="clrFld('motor_field_power',this)"></td>
   </tr>
   <tr>
     <td><div>Motor Voltage<em>(V)</em></div></td>
