--- a/specific_speed.html
+++ b/specific_speed.html
@@ -13,7 +13,6 @@
 		vertical-align:top
 	}
 	#xcalc_btn {
-		
 		margin-top:1rem
 	}
 	select,input {
@@ -42,11 +41,11 @@
 				<option>Large end suction</option>
 			</select><br>
 			Pump Speed <em>(rpm)</em><br>
-			<input name='pump_rated_speed'><br>
+			<input name='pump_rated_speed' value=1780 data-vd-gt><br>
 			<label id=lbl_flow>Flow</label>
-			<input name='flow'><br>
+			<input name='flow' value=2000 data-vd-gt><br>
 			<label id=lbl_hd>Head</label>
-			<input name='head'><br>
+			<input name='head' value=277 data-vd-gt><br>
 			<button id=plot_btn class=prime onclick='calc()'>CALCULATE</button>
 		</div>
 		<div id=plot>
@@ -106,14 +105,9 @@
 	
 	nmAll().change(()=>{
 		$('#plot').hide();
-		let d = setData({});
-		if (d.pump_style>=0 && d.flow!='' && d.head!='' && d.pump_rated_speed!='') {
-			$('#plot_btn').show();
-		} else {
-			$('#plot_btn').hide();
-		}
+		$('#plot_btn').show();
 	});
-	nmAll().first().change();
+	$('[data-vd-gt]').change(ev=>vdGt(ev.target));
 	$('#lbl_flow').append(em(unit(DIST) == 'ft' ? 'gpm' : 'm^3/hr'));
 	$('#lbl_hd').append(em(unit(DIST)));	
 	
