--- a/nema.html
+++ b/nema.html
@@ -39,7 +39,7 @@ TEFC: <span id=result></span>
     $('#lblMRP').append(em(unit(POWER)));    
 
     nm('efficiency_class').change(effChg);
-    $('[data-vd-gt]').change(ev=>vdGt(ev.target));
+    setupVd();
     nmAll().change(() => $('#result').text(rnd(Bridge.nema(cvtArg(setData({}))))));
     nmAll().first().change();
 </script>
