--- a/specific_speed.html
+++ b/specific_speed.html
@@ -107,7 +107,7 @@
 		$('#plot').hide();
 		$('#plot_btn').show();
 	});
-	$('[data-vd-gt]').change(ev=>vdGt(ev.target));
+	setupVd();
 	$('#lbl_flow').append(em(unit(DIST) == 'ft' ? 'gpm' : 'm^3/hr'));
 	$('#lbl_hd').append(em(unit(DIST)));	
 	
