--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
           Units = IMP;
           Conds = [];
           HeadTool = {Ds:14,Dd:10,Ps:5,Pd:124,Ks:1,Kd:1};  
-          Curve = {C:1.9,plot:["","","",""]};
+          Curve = {C:1.9,plot:[2000,277,2300,350]};
           MotorPerf = {
             line: 1,
             motor_rated_power: 200,
