--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
           };        
           Units = IMP;
           Conds = [];
-          HeadTool = {Ds:14,Dd:10,Ps:5,Pd:124,Ks:1,Kd:1};  
+          HeadTool = {Ds:14,Dd:10,Ps:5,Pd:124,Ks:1,Kd:1,Zs:0,Zd:0,Pg_s:115,Ztnk_s:0};  
           Curve = {C:1.9,plot:[2000,277,2300,350]};
           MotorPerf = {
             line: 1,
