--- a/headtool.html
+++ b/headtool.html
@@ -53,10 +53,10 @@
 	<tr>
 		<td>Pipe inner diameter</td>
 		<td>						
-			<input name=Ds>
+			<input name=Ds data-vd-gt=.1>
 		</td>
 		<td>
-			<input name=Dd>
+			<input name=Dd data-vd-gt=.1>
 		</td>
 	</tr>
 	<tr class="sucTank">
@@ -64,7 +64,7 @@
 			Tank gas overpressure
 		</td>
 		<td>
-			<input name=Pg_s><strong>Pg</strong>
+			<input name=Pg_s data-vd-gt=0><strong>Pg</strong>
 		</td>
 	</tr>
 	<tr class="sucTank">
@@ -72,38 +72,38 @@
 			Tank fluid surface elevation
 		</td>
 		<td>
-			<input name=Ztnk_s><strong>Zs</strong>
+			<input name=Ztnk_s data-vd-gt=0><strong>Zs</strong>
 		</td>
 	</tr>	
 	<tr>
 		<td>Gauge pressure</td>
 		<td>
 			<div class=sucGauge>
-				<input name=Ps><strong>Ps</strong>
+				<input name=Ps data-vd-gt=0><strong>Ps</strong>
 			</div>									
 		</td>
 		<td>						
-			<input name=Pd><strong>Pd</strong>
+			<input name=Pd data-vd-gt=0><strong>Pd</strong>
 		</td>
 	</tr>
 	<tr>
 		<td>Gauge elevation</td>
 		<td>
 			<div class=sucGauge>
-				<input name=Zs><strong>Zs</strong>
+				<input name=Zs data-vd-gt=0><strong>Zs</strong>
 			</div>
 		</td>
 		<td>			
-			<input name=Zd><strong>Zd</strong>
+			<input name=Zd data-vd-gt=0><strong>Zd</strong>
 		</td>
 	</tr>
 	<tr>
 		<td>Line loss coefficients</td>
 		<td>
-			<input name=Ks><strong>Ks</strong>
+			<input name=Ks data-vd-gt=0><strong>Ks</strong>
 		</td>
 		<td>			
-			<input name=Kd><strong>Kd</strong>
+			<input name=Kd data-vd-gt=0><strong>Kd</strong>
 		</td>
 	</tr>
 	<tr><td>&nbsp;</td></tr>
@@ -231,4 +231,5 @@
 	});
 	setCtls(HeadTool);
 	suction();
+	setupVd();
 </script>
