--- a/grid.html
+++ b/grid.html
@@ -81,7 +81,7 @@
   </tr>
   <tr>
     <td>Specific Gravity</td>
-    <td><input name='specific_gravity' onchange='vdGt(this,.1)'></td>
+    <td><input name='specific_gravity' data-vd-gt=.1></td>
   </tr>
   <tr>
     <td>Number Stages</td>
@@ -133,7 +133,7 @@
   </tr>
   <tr>
     <td><div>Size Margin <em>(%)</em></div></td>
-    <td><input name='margin' onchange='vdGt(this,0)'></td>
+    <td><input name='margin' data-vd-gt=0></td>
   </tr>
   <tr>
     <td class='th'>Cost</td><td/>
@@ -144,7 +144,7 @@
   </tr>
  <tr>
     <td><div>Energy Cost<em>($/kwhr)</em></td>
-    <td><input name='cost' onchange='vdGt(this,0)'></td>
+    <td><input name='cost' data-vd-gt=0></td>
   </tr>
   <tr>
     <td class='th'>Field</td><td/>
