--- a/nema.html
+++ b/nema.html
@@ -26,7 +26,7 @@ Efficiency Class<br>
 <label class=vsp><input name='efficiency_class' type=radio value=2> Custom </label>
 <input class=vsp name='efficiency' style='display:none'></input>
 <hr>
-TEFC: <span id=result></span>
+<div style='display:flex; align-items: center'>TEFC:<span id=result style='margin-left:.5rem'></span><em style='margin-left:.25rem'>(%)</em></div>
 
 <script>
     function effChg() {
