--- a/grid.html
+++ b/grid.html
@@ -9,7 +9,7 @@
   #results td:not(:first-child) span,#results~tr span {
     width:50%;
   }
-  td>div>em {
+  em {
     color: #5d9300;
   }
   td>div {
@@ -58,9 +58,9 @@
         <option>Double suction</option>
         <option>Vertical turbine</option>
         <option>Large end suction</option>
-        <option>Specified optimal eff</option>
+        <option>Specified optimal efficiency</option>
       </select>
-      <input name='pump_specified'></input>
+      <span><input name='pump_specified'></input> <em>(%)</em></span>
     </td>
   </tr>  
   <tr>
