--- a/pump_eff.html
+++ b/pump_eff.html
@@ -47,8 +47,7 @@
 		
 		P.getYobj = x => 
 			Bridge.pumpEfficiency(cvtArg(setData({
-				flow: x,
-				pump_specified: 0
+				flow: x
 			})));
 		curveMulti('average');
 		curveMulti('max','white');
