--- a/grid.html
+++ b/grid.html
@@ -60,7 +60,7 @@
         <option>Large end suction</option>
         <option>Specified optimal efficiency</option>
       </select>
-      <span><input name='pump_specified'></input> <em>(%)</em></span>
+      <span><input name='pump_specified' data-vd-gt></input> <em>(%)</em></span>
     </td>
   </tr>  
   <tr>
@@ -120,7 +120,7 @@
         <option>Energy</option>
         <option>Custom</option>
       </select>
-      <input name='efficiency' data-vd-gt></input>
+      <span><input name='efficiency' data-vd-gt></input> <em>(%)</em></span>
     </td>
   </tr>    
   <tr>
