--- a/grid.html
+++ b/grid.html
@@ -267,7 +267,7 @@
   function ioBtn(e) {
     return $('.ioBtn').eq(parIdx(e,-1));
   }
-  function col(e) {//UPTD!
+  function col(e) {
     return $(`td:nth-child(${upTD(e).index()+1})`);
   }
   function saveCol(e) {
@@ -375,7 +375,7 @@
     });    
   });         
   setupVd();
-  nmAll('#grid').change(function() {alert('yo');
+  nmAll('#grid').change(function() {
     saveCol(this);
     showHdResults(false);
   });
