--- a/conditions.html
+++ b/conditions.html
@@ -19,7 +19,7 @@
 		<tr>
 			<td><input type="checkbox" onclick="setGrid(this)"></td>
 			<td onclick='edit(this)'></td>
-			<td><button onclick='rm(this)'><i class="fa fa-times"></i></button></td>
+			<td><button onclick='rm(this)'><i class="fa fa-trash-o"></i></button></td>
 			<td><button onclick='cp(this)'><i class="fa fa-plus"></i></button></td>
 		</tr>
 		<tr>
