--- a/specific_speed.html
+++ b/specific_speed.html
@@ -27,8 +27,7 @@
 			<a style='display:block' onclick='lnk(event,"what_is_ss")' href=''>What Is Specific Speed?</a><br>
 			<span>Pump Style</span><br>
 			<select name='pump_style'>
-				<option selected disabled>Choose</option>
-				<option>End suction slurry</option>
+				<option selected>End suction slurry</option>
 				<option>End suction sewage</option>
 				<option>End suction stock</option>
 				<option>End suction submersible sewage</option>
